@@ -408,6 +408,11 @@ public class EncryptionOptions
         return ap == null ?  new String[0] : ap.toArray(new String[0]);
     }
 
+    public String[] cipherSuitesArray()
+    {
+        return cipher_suites == null ? null : cipher_suites.toArray(new String[0]);
+    }
+
     public TlsEncryptionPolicy tlsEncryptionPolicy()
     {
         if (getOptional())
